--- a/index.html
+++ b/index.html
@@ -1,37 +1,205 @@
-<!-- TO ACHIEVE THIS TYPE IN "!" AND PRESS "TAB" -->
 <!DOCTYPE html>
-<!-- html below is a tag pair. "lang" is a language setting and is set to English. Html has 2 children: head and body -->
 <html lang="en">
-<!-- head below is a tag pair. It contains metadata about the document and links to external resources. -->
 <head>
-    <!-- meta below is a tag pair. It provides metadata about the HTML document. chrset = "UTF-8" is pulling all latin charachters-->
-    <meta charset="UTF-8">
-    <!-- Tag pair. Provides metadata about the HTML document. name = "viewport" is setting the viewport to the device's width and initial scale to 1.0 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Dev Starter</title>
-
-    <!-- Favicons -->
-    <link rel="icon" type="image/png" href="/favicons/favicon-48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg" />
-    <link rel="shortcut icon" href="/favicons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Web Dev Starter" />
-    <link rel="manifest" href="/favicons/site.webmanifest" />    
-
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
-
-    <!-- JavaScript -->
-     <!-- script:src and then press tab for shortcut-->
-    <script src="script.js" defer> </script>
-
+  <meta charset="UTF-8">
+  <title>Image Asset Extractor with Outline & Selection</title>
+  <style>
+    body { font-family: sans-serif; padding: 2em; background: #f9f9f9; }
+    #images { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 1em; }
+    canvas { border: 1px solid #ccc; background: white; cursor: pointer; transition: box-shadow 0.2s; }
+    canvas.selected { box-shadow: 0 0 0 4px lightblue; }
+    label { font-weight: bold; margin-right: 1em; }
+    .bar-container { width: 400px; height: 20px; background: #ddd; margin: 10px 0; }
+    .bar { height: 100%; background: #76c7c0; width: 0%; transition: width 0.3s ease; }
+  </style>
 </head>
-
-<!-- body below is a tag pair. It contains the content of the document. -->
 <body>
+  <h2>Upload, Extract, Outline & Download Image Assets</h2>
 
-    <h1>Web Dev Starter</h1>
+  <input type="file" id="upload" accept="image/png">
+  <div class="bar-container"><div id="uploadBar" class="bar"></div></div>
 
+  <br>
+  <label>Outline Color:
+    <input type="color" id="outlineColor" value="#000000">
+  </label>
+
+  <label style="margin-left: 2em;">Thickness:
+    <input type="range" id="thickness" min="1" max="20" value="3">
+    <span id="thicknessValue">3</span>px
+  </label>
+
+  <br><br>
+  <button id="selectAll">Select All</button>
+  <button id="downloadSelected">Download Selected Images</button>
+
+  <div id="images"></div>
+
+  <script>
+    const upload = document.getElementById('upload');
+    const uploadBar = document.getElementById('uploadBar');
+    const outlineColor = document.getElementById('outlineColor');
+    const thicknessSlider = document.getElementById('thickness');
+    const thicknessValue = document.getElementById('thicknessValue');
+    const imagesDiv = document.getElementById('images');
+    const downloadSelected = document.getElementById('downloadSelected');
+    const selectAllBtn = document.getElementById('selectAll');
+
+    thicknessSlider.addEventListener('input', () => {
+      thicknessValue.textContent = thicknessSlider.value;
+    });
+
+    function setBar(percent) {
+      uploadBar.style.width = percent + '%';
+    }
+
+    function hexToRgb(hex) {
+      return {
+        r: parseInt(hex.slice(1, 3), 16),
+        g: parseInt(hex.slice(3, 5), 16),
+        b: parseInt(hex.slice(5, 7), 16)
+      };
+    }
+
+    function extractAssets(image) {
+      const temp = document.createElement('canvas');
+      temp.width = image.width;
+      temp.height = image.height;
+      const tctx = temp.getContext('2d');
+      tctx.drawImage(image, 0, 0);
+      const data = tctx.getImageData(0, 0, temp.width, temp.height);
+
+      const visited = new Uint8Array(temp.width * temp.height);
+      const components = [];
+
+      function floodFill(x, y, bounds) {
+        const queue = [[x, y]];
+        const min = { x, y }, max = { x, y };
+
+        while (queue.length > 0) {
+          const [cx, cy] = queue.pop();
+          const idx = cy * temp.width + cx;
+          if (cx < 0 || cy < 0 || cx >= temp.width || cy >= temp.height) continue;
+          if (visited[idx]) continue;
+
+          const pixelIdx = idx * 4;
+          if (data.data[pixelIdx + 3] === 0) continue;
+
+          visited[idx] = 1;
+          min.x = Math.min(min.x, cx);
+          min.y = Math.min(min.y, cy);
+          max.x = Math.max(max.x, cx);
+          max.y = Math.max(max.y, cy);
+
+          queue.push([cx+1, cy]);
+          queue.push([cx-1, cy]);
+          queue.push([cx, cy+1]);
+          queue.push([cx, cy-1]);
+        }
+
+        if ((max.x - min.x) > 3 && (max.y - min.y) > 3) {
+          components.push({ min, max });
+        }
+      }
+
+      for (let y = 0; y < temp.height; y++) {
+        for (let x = 0; x < temp.width; x++) {
+          const idx = y * temp.width + x;
+          const a = data.data[idx * 4 + 3];
+          if (!visited[idx] && a > 0) {
+            floodFill(x, y);
+          }
+        }
+      }
+
+      return components.map((b, i) => {
+        const cropW = b.max.x - b.min.x;
+        const cropH = b.max.y - b.min.y;
+        const paddingRatio = 0.1;
+        const usableW = 400 * (1 - 2 * paddingRatio);
+        const usableH = 400 * (1 - 2 * paddingRatio);
+        const scale = Math.min(usableW / cropW, usableH / cropH);
+        const drawW = cropW * scale;
+        const drawH = cropH * scale;
+        const offsetX = (400 - drawW) / 2;
+        const offsetY = (400 - drawH) / 2;
+
+        const canvas = document.createElement('canvas');
+        canvas.width = 400;
+        canvas.height = 400;
+        const ctx = canvas.getContext('2d');
+
+        ctx.clearRect(0, 0, 400, 400);
+        ctx.drawImage(temp, b.min.x, b.min.y, cropW, cropH, offsetX, offsetY, drawW, drawH);
+
+        const imageData = ctx.getImageData(0, 0, 400, 400);
+        const outlined = ctx.getImageData(0, 0, 400, 400);
+        const thickness = parseInt(thicknessSlider.value);
+        const color = hexToRgb(outlineColor.value);
+
+        for (let y = 0; y < 400; y++) {
+          for (let x = 0; x < 400; x++) {
+            const idx = (y * 400 + x) * 4;
+            if (imageData.data[idx + 3] === 0) continue;
+            let edge = false;
+            for (let dy = -thickness; dy <= thickness; dy++) {
+              for (let dx = -thickness; dx <= thickness; dx++) {
+                const nx = x + dx, ny = y + dy;
+                if (nx < 0 || ny < 0 || nx >= 400 || ny >= 400) continue;
+                const nIdx = (ny * 400 + nx) * 4;
+                if (imageData.data[nIdx + 3] === 0) edge = true;
+              }
+            }
+            if (edge) {
+              outlined.data[idx] = color.r;
+              outlined.data[idx + 1] = color.g;
+              outlined.data[idx + 2] = color.b;
+              outlined.data[idx + 3] = 255;
+            }
+          }
+        }
+
+        ctx.putImageData(outlined, 0, 0);
+        return canvas;
+      });
+    }
+
+    upload.addEventListener('change', () => {
+      const file = upload.files[0];
+      if (!file) return;
+      setBar(10);
+      const reader = new FileReader();
+      reader.onload = () => {
+        const img = new Image();
+        img.onload = () => {
+          setBar(30);
+          const assets = extractAssets(img);
+          setBar(70);
+          imagesDiv.innerHTML = '';
+          assets.forEach((canvas, i) => {
+            canvas.classList.add('selectable');
+            canvas.addEventListener('click', () => canvas.classList.toggle('selected'));
+            imagesDiv.appendChild(canvas);
+          });
+          setBar(100);
+        };
+        img.src = reader.result;
+      };
+      reader.readAsDataURL(file);
+    });
+
+    selectAllBtn.addEventListener('click', () => {
+      document.querySelectorAll('#images canvas').forEach(canvas => canvas.classList.add('selected'));
+    });
+
+    downloadSelected.addEventListener('click', () => {
+      document.querySelectorAll('#images canvas.selected').forEach((canvas, i) => {
+        const a = document.createElement('a');
+        a.href = canvas.toDataURL();
+        a.download = `asset_${i+1}.png`;
+        a.click();
+      });
+    });
+  </script>
 </body>
 </html>
-
